--- a/theme.html
+++ b/theme.html
@@ -256,7 +256,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p>All rights Reserved &copy; <a href="/">{{ site.name }}</a> by <a href="https://twitter.com/ManOTheClassics">Jackson Wyndow</a>. Powered by <a href="http://postach.io/">Postach.io for Notetaking purposes</a></p>
+                    <p>All rights Reserved &copy; <a href="/">{{ site.name }}</a> by <a href="https://Valiantghost.com">Jackson Wyndow</a>. Powered by <a href="http://postach.io/">Postach.io</a> for Notetaking purposes</p>
                 </div>
             </div>
         </div>
