--- a/theme.html
+++ b/theme.html
@@ -11,6 +11,8 @@
       | {{ site.name }}
     </title>
 
+      <link rel="icon" href="favicon.ico" type="image/gif" sizes="32x32">
+      
     {{ header_meta }}
 
     <link href="{{ assets('css/style.css') }}" rel="stylesheet">
@@ -254,7 +256,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p>All rights Reserved &copy; <a href="/">{{ site.name }}</a> by <a href="https://Valiantghost.com">Jackson Wyndow</a>. Powered by <a href="http://postach.io/">Postach.io</a> for Notetaking purposes</p>
+                    <p>All rights Reserved &copy; <a href="/">{{ site.name }}</a> by <a href="http://valiantghost.com/">Jackson Wyndow</a>. Powered by <a href="http://postach.io/">Postach.io</a> for Notetaking purposes</p>
                 </div>
             </div>
         </div>
