--- a/theme.html
+++ b/theme.html
@@ -8,7 +8,7 @@
       {% elif is_tag %}{{ tag }}
       {% elif post %}{{ post.title }}
       {% endif %}
-      | {{ site.name }}
+     {{ site.name }}
     </title>
 
       <link rel="icon" href="favicon.ico" type="image/gif" sizes="32x32">
