--- a/theme.html
+++ b/theme.html
@@ -220,7 +220,7 @@
 
                 {% endif %}
                 </div>
-                    <p>All rights Reserved &copy; <a href="/">{{ site.name }}</a> by <a href="http://valiantghost.com/">Jackson Wyndow</a>. Powered by <a href="http://postach.io/">Postach.io</a> for Notetaking purposes</p>
+                    <p>Copyright &copy;- <a href="http://valiantghost.com/">Jackson Wyndow</a>. Powered by <a href="http://postach.io/">Postach.io</a> for Notetaking purposes</p>
                 </div>
             </div>
         </div>
