--- a/theme.html
+++ b/theme.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html prefix="og: http://ogp.me/ns#" xmlns:og="http://ogp.me/ns#">
   <head>
+      
+<link href="prism.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
     <title>
       {% if is_login %}Login
@@ -225,7 +227,7 @@
             </div>
         </div>
     </div>
-
+ <script src="prism.js"></script>
     {% endif %}
 
     {{ footer_meta }}
