--- a/theme.html
+++ b/theme.html
@@ -230,6 +230,9 @@
     {% endif %}
 
     {{ footer_meta }}
-
+<script>
+hljs.configure({tabReplace: '  '});
+hljs.initHighlightingOnLoad();
+</script>
   </body>
 </html>
