Code highlighting that might work now?
Tried linking directly to the repo using the raw url.

--- a/theme.html
+++ b/theme.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html prefix="og: http://ogp.me/ns#" xmlns:og="http://ogp.me/ns#">
     <head>
-<link href="prism.css" rel="stylesheet" type="text/css">
-<script src="prism.js"></script>
+<link href="https://raw.githubusercontent.com/Summonee/Valiant-Notes-Theme/master/prism.css" rel="stylesheet" type="text/css">
+<script src="https://raw.githubusercontent.com/Summonee/Valiant-Notes-Theme/master/prism.js"></script>
     <meta charset="utf-8">
     <title>
       {% if is_login %}Login
@@ -230,9 +230,5 @@
     {% endif %}
 
     {{ footer_meta }}
-<script>
-hljs.configure({tabReplace: '  '});
-hljs.initHighlightingOnLoad();
-</script>
   </body>
 </html>
