--- a/theme.html
+++ b/theme.html
@@ -12,7 +12,9 @@
     </title>
 
       <link rel="icon" href="favicon.ico" type="image/gif" sizes="32x32">
-      <link href="https://raw.githubusercontent.com/Summonee/Valiant-Notes-Theme/master/prism.css" rel="stylesheet" type="text/css">
+      <link rel="stylesheet" title="Tomorrow Night" href="http://highlightjs.org/static/styles/tomorrow-night.css">
+<script src="http://highlightjs.org/static/highlight.pack.js"></script>
+        <link href="https://raw.githubusercontent.com/Summonee/Valiant-Notes-Theme/master/prism.css" rel="stylesheet" type="text/css">
 <script src="https://raw.githubusercontent.com/Summonee/Valiant-Notes-Theme/master/prism.js"></script>
     {{ header_meta }}
 
@@ -227,7 +229,11 @@
         </div>
     </div>
     {% endif %}
-
+<script>
+//Syntax Highlighter
+hljs.configure({tabReplace: '  '});
+hljs.initHighlightingOnLoad();
+</script>
     {{ footer_meta }}
   </body>
 </html>
