--- a/theme.html
+++ b/theme.html
@@ -214,7 +214,7 @@
 
                 {% endif %}
                 </div>
-<center><p>Copyright &copy; <a href="http://valiantghost.com/">Jackson Wyndow</a>. Powered by <a href="http://postach.io/">Postach.io</a> for Notetaking purposes</p></center>
+<center><p>Copyright &copy; <a href="http://valiantghost.com/">Jackson Wyndow</a> 2015 - {{format_date}}. Powered by <a href="http://postach.io/">Postach.io</a> for Notetaking purposes</p></center>
                 </div>
             </div>
         </div>
