--- a/theme.html
+++ b/theme.html
@@ -61,6 +61,13 @@
     <div class="container">
         <div class="row">
             <div class="fourteen columns offset-by-two">
+                {% if pages %}
+                <nav class="site-nav">
+                    <ul class="nav-menu">
+                        <li><a href="{{ site.base_url }}">Blog</a></li>
+                        {% for page in pages %}
+                        <li><a href="{{ page.permalink }}" class="{{ set_active(page.permalink) }}">{{ page.title }}</a></li>
+                        {% endfor %}
                     </ul>
                 </nav>
                 {% endif %}
@@ -214,7 +221,7 @@
 
                 {% endif %}
                 </div>
-<center><p>Copyright &copy; <a href="http://valiantghost.com/">Jackson Wyndow</a> 2015 - {{format_date}}. Powered by <a href="http://postach.io/">Postach.io</a> for Notetaking purposes</p></center>
+        <center><p>Copyright &copy; <a href="http://valiantghost.com/">Jackson Wyndow</a>. Powered by <a href="http://postach.io/">Postach.io</a> for Notetaking purposes</p></center>
                 </div>
             </div>
         </div>
